Fixed pricing spacing that was applying to every header

--- a/src/scss/desktop/_main.scss
+++ b/src/scss/desktop/_main.scss
@@ -698,7 +698,7 @@ body {
 
             padding: 0 0 util.rem(16) 0;
 
-            &:last-of-type {
+            &-pricing {
                 padding: 0 0 0 0;
             }
         }
